--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@ body {
   background: rgb(251, 251, 251);
   font-family: $montserrat-typography;
   color: #ff7a00;
+  min-width: 600px;
 }
 
 code {
