--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,6 +1,8 @@
 .app {
-  height: 100vh;
   padding: 40px 100px;
   display: flex;
   gap: 20px;
+  background: #ffedd491;
+  width: fit-content;
+  height: 100vh;
 }
