--- a/src/pages/LunchAndLearn/LunchAndLearn.module.scss
+++ b/src/pages/LunchAndLearn/LunchAndLearn.module.scss
@@ -12,11 +12,13 @@
 
     .title {
       font-size: 40px;
+      cursor: default;
     }
 
     .line {
       width: auto;
-      margin: 0 0 20px 0;
+      max-width: 450px;
+      margin: 0 0 25px 0;
     }
 
     .list {
@@ -29,11 +31,13 @@
       letter-spacing: 0.5px;
       cursor: default;
 
-      :nth-child(1) {
+      .link {
+        color: #ff7a00;
         font-weight: bold;
         cursor: pointer;
+        text-decoration: none;
       }
-      :nth-child(1):hover {
+      .link:hover {
         text-decoration: underline;
       }
     }
