setting min allowed dimentions

--- a/src/index.scss
+++ b/src/index.scss
@@ -21,7 +21,8 @@ body {
   background: rgb(251, 251, 251);
   font-family: $montserrat-typography;
   color: #ff7a00;
-  min-width: 600px;
+  min-height: 600px;
+  min-width: 1024px;
 }
 
 code {
